construção da funcionalidade de autenticação

--- a/src/app/views/auth/signup.njk
+++ b/src/app/views/auth/signup.njk
@@ -1,10 +1,10 @@
 {% extends "_layouts/auth.njk" %}
 {% block body %}
-  <form action='/signup' method='post'>
+  <form action='/signup' method='post' enctype='multipart/form-data'>
   <label for='avatar'>
     <img src='/images/avatar.svg' height=24>
   </label>
-    <input id='avatar' name='avatar' type='file'enctype='multipart/form-data'/>
+    <input id='avatar' name='avatar' type='file' />
     <input type='text' name='name' placeholder='Nome completo'/>
     <input type='text' name='email' placeholder='Seu e-mail'/>
     <input type='password'name='password' placeholder='Senha Secreta'/>
