Criaçao de Lista de Cabeleireiros e alerts

--- a/src/app/views/_layouts/default.njk
+++ b/src/app/views/_layouts/default.njk
@@ -2,7 +2,7 @@
 <html lang="en">
 {% include "_partials/head.njk" %}
 <body>
-  <div class="auth-wrapper">
+  <div class="main-wrapper">
     {% block body %}
     <h1>Hello World</h1>
     {% endblock %}
