--- a/src/app/views/auth/signin.njk
+++ b/src/app/views/auth/signin.njk
@@ -2,6 +2,8 @@
 {% block body %}
   <form action='/signin' method='post' >
     <img src='/images/logo.svg' height=42>
+    {% include "_partials/flash.njk" %}
+
     <input type='text' name='email' placeholder='Seu e-mail'/>
     <input type='password'name='password' placeholder='Senha Secreta'/>
 
