criaçao de FileController e rota para as imagens

--- a/src/app/views/dashboard.njk
+++ b/src/app/views/dashboard.njk
@@ -2,19 +2,20 @@
 {% block body %}
 
 <div class='content'>
-<strong>Olá,{{user.name}} </strong>
+<strong>Olá, {{user.name}} </strong>
 <p>Inicie um agendamento escolhendo um profissional abaixo:</p>
 <ul class='providers'>
 {% for provider in providers%}
   <li class ='provider'>
     <div>
-    <img src=''>
+    <img src='/files/{{provider.avatar}}'>
     <strong>{{provider.name}}</strong>
     </div>
     <a href=''>+</a>
   </li>
   {% endfor %}
 </ul>
+<a href='/app/logout' class='logout'>Sair</a>
 </div>
-<a href='/app/logout'>Sair</a>
+
 {% endblock %}
