--- a/src/app/views/_partials/head.njk
+++ b/src/app/views/_partials/head.njk
@@ -1,8 +1,13 @@
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title> GoBarber </title>
+  <title>GoBarber</title>
 
-  <link rel='stylesheet' href='/styles.css' />
+  <link rel="stylesheet" href="/styles.css" />
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
+  />
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 </head>
