--- a/src/app/views/dashboard.njk
+++ b/src/app/views/dashboard.njk
@@ -1,21 +1,20 @@
-{% extends "_layouts/default.njk" %}
-{% block body %}
+{% extends "_layouts/default.njk" %} {% block body %}
 
-<div class='content'>
-<strong>Olá, {{user.name}} </strong>
-<p>Inicie um agendamento escolhendo um profissional abaixo:</p>
-<ul class='providers'>
-{% for provider in providers%}
-  <li class ='provider'>
-    <div>
-    <img src='/files/{{provider.avatar}}'>
-    <strong>{{provider.name}}</strong>
-    </div>
-    <a href=''>+</a>
-  </li>
-  {% endfor %}
-</ul>
-<a href='/app/logout' class='logout'>Sair</a>
+<div class="content">
+  <strong>Olá, {{ user.name }} </strong>
+  <p>Inicie um agendamento escolhendo um profissional abaixo:</p>
+  <ul class="providers">
+    {% for provider in providers%}
+    <li class="provider">
+      <div>
+        <img src="/files/{{ provider.avatar }}" />
+        <strong>{{ provider.name }}</strong>
+      </div>
+      <a href="/app/appointments/new/{{ provider.id }}">+</a>
+    </li>
+    {% endfor %}
+  </ul>
+  <a href="/app/logout" class="logout">Sair</a>
 </div>
 
 {% endblock %}
